--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+.back
+{  background-color: #F8F6F6;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +9,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #F8F6F6 100% 100%;
+
 }
 
 code {
